# IDDisplay

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  ShazamIO.py  ShazamIO.spec  compile-dependencies-linux.txt  old.rs  readme.md
.github/workflows/: rust.yml
lx-dist-aarch64/ShazamIO/_internal/: libasound-a86c999f.so.2
lx-dist-arm64/ShazamIO/_internal/shazamio_core.libs/: libasound-a86c999f.so.2
lx-dist-x86_64/ShazamIO/_internal/: libasound-e86fe982.so.2
lx-py-venv/: pyvenv.cfg
src/: main.rs  song.rs  spotify_callback.rs
src/song/: rcognize.rs  spotify.rs
win-py-venv/: pyvenv.cfg
win-py-venv/Scripts/: activate  activate.bat
