[package]
name = "MusicDisplay"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
iced = { version = "0.13.1", features = ["image", "async-std", "tiny-skia"]}
hound = "3.5.1"
cpal = "0.15.3"
clap = { version = "4.5.18", features = ["derive"] }
anyhow = "1.0"
image = { version = "0.25.2" }
futures = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }

