[package]
name = "MusicDisplay"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
iced = { version = "0.13.1", default-features = false, features = ["image", "async-std", "tiny-skia", "fira-sans", "auto-detect-theme", "qr_code", "tokio"]}
hound = "3.5.1"
cpal = "0.15.3"
clap = { version = "4.5.18", features = ["derive"] }
anyhow = "1.0"
image = { version = "0.25.2" }
futures = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
local-ip-address = "0.6.3"
tokio = { version = "1", features = ["full"] }
#spotify
rspotify = { version = "0.13.3"}
warp = "0.3"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture arm64",
    "apt-get update && apt-get install --assume-yes libssl-dev:arm64 libasound2-dev:arm64"
]
[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH libasound2-dev"
]

